force-app/main/default/objects/HDT_GestioneScartiSap__mdt/HDT_GestioneScartiSap__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type per la gestione della Scarti SAP</description>
    <label>Gestione Scarti Sap</label>
    <pluralLabel>Gestione Scarti Sap</pluralLabel>
</CustomObject>