force-app/main/default/objects/HDT_GestioneScartiSap__mdt/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>ATTIVITA inviata da heroku</description>
    <label>Attività</label>
    <length>255</length>
    <type>Text</type>
</CustomField>