force-app/main/default/objects/HDT_GestioneScartiSap__mdt/fields/ActivityInitialStatus__c.field-meta.xml
<CustomField>
    <fullName>ActivityInitialStatus__c</fullName>
    <description>Aperta | Chiusa (stato iniziale dell’activity da creare)</description>
    <label>Stato Iniziale Attività</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aperta</fullName>
                <default>true</default>
                <label>Aperta</label>
            </value>
            <value>
                <fullName>Chiusa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>