force-app/main/default/objects/HDT_GestioneScartiSap__mdt/fields/ActivityToClose__c.field-meta.xml
<CustomField>
    <fullName>ActivityToClose__c</fullName>
    <description>Se valorizzato, l’activity configurata in questo campo deve essere chiusa contestualmente alla creazione della nuova activity.</description>
    <label>Attività da Chiudere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>