force-app/main/default/objects/HDT_GestioneScartiSap__mdt/fields/CreateActivity__c.field-meta.xml
<CustomField>
    <fullName>CreateActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se true, creare activity pclick configurata nel campo Activity__c</description>
    <label>Crea Attività</label>
    <type>Checkbox</type>
</CustomField>