force-app/main/default/objects/HDT_GestioneScartiSap__mdt/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>FASE inviata da heroku</description>
    <label>Fase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>