force-app/main/default/objects/HDT_GestioneScartiSap__mdt/fields/SkipPhaseManager__c.field-meta.xml
<CustomField>
    <fullName>SkipPhaseManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se true, effettuare cambio fase skippando il phase manager</description>
    <label>Salta Phase Manager</label>
    <type>Checkbox</type>
</CustomField>